# imprint-memory

./: .env.example  CHANGELOG.md  LICENSE  README.md  README_zh.md  REVIEW_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
examples/: memory_search.py
hooks/: memory-check.sh
imprint_memory/: chat_sync_receiver.py  compress.py  console.py  conversation.py  conversation_chunker.py  conversation_search.py  db.py  memory_manager.py  server.py
imprint_memory/data/: userdict_emotional.txt
imprint_memory/hooks/: memory-check.sh
scripts/: setup.sh
tests/: test_conversation_external_id.py
