[project]
name = "imprint-memory"
version = "0.1.0"
description = "Persistent memory system for Claude Code — hybrid search (FTS5 + vector), message bus, task queue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Qizhan7" }]
keywords = ["claude", "mcp", "memory", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.34.0",
    "starlette>=0.27.0",
]
vectors = [
    "numpy>=1.24.0",
]
chinese = [
    "jionlp>=1.5.0",
    "jieba>=0.42.0",
]
receiver = [
    "uvicorn>=0.34.0",
    "starlette>=0.27.0",
    "numpy>=1.24.0",
]
all = [
    "uvicorn>=0.34.0",
    "starlette>=0.27.0",
    "numpy>=1.24.0",
    "jionlp>=1.5.0",
    "jieba>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/Qizhan7/imprint-memory"
Repository = "https://github.com/Qizhan7/imprint-memory"
Issues = "https://github.com/Qizhan7/imprint-memory/issues"

[project.scripts]
imprint-memory = "imprint_memory.server:main"
imprint-console = "imprint_memory.console:main"
imprint-memory-receiver = "imprint_memory.chat_sync_receiver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imprint_memory"]
